--- a/front-example/src/main/resources/application.properties
+++ b/front-example/src/main/resources/application.properties
@@ -14,4 +14,7 @@ quarkus.oidc.application-type=web-app
 quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
 
+# Enable Policy Enforcement
+quarkus.keycloak.policy-enforcer.enable=true
+
 #quarkus.log.category."com.gargoylesoftware.htmlunit.DefaultCssErrorHandler".level=ERROR
