--- a/front-layout-main/pom.xml
+++ b/front-layout-main/pom.xml
@@ -81,6 +81,22 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-hibernate-validator</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>es.opplus.front</groupId>
+            <artifactId>front-browser-notifications</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-oidc</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
