--- a/front-example/pom.xml
+++ b/front-example/pom.xml
@@ -139,6 +139,12 @@
             <artifactId>quarkus-oidc</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>es.opplus.front</groupId>
+            <artifactId>front-layout-main</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
     <repositories>
         <repository>
