--- a/front-example/src/main/resources/application.properties
+++ b/front-example/src/main/resources/application.properties
@@ -6,10 +6,10 @@
 #quarkus.index-dependency.multiselect-combo-box-flow.artifact-id=multiselect-combo-box-flow
 
 # Autentication - Keycloack
-quarkus.oidc.auth-server-url=http://localhost:8081/auth/realms/Opplus
-quarkus.oidc.client-id=front2
+quarkus.oidc.auth-server-url=https://sso-picasso-des-des.infraopplus.igrupobbva/auth/realms/Prueba
+quarkus.oidc.client-id=app-n300-00-tray-stage
 quarkus.oidc.credentials.client-secret.method=post
-quarkus.oidc.credentials.client-secret.value=4b4ce490-43d5-495a-a6da-1e7cf8b9169d
+quarkus.oidc.credentials.client-secret.value=e7fe796b-f14e-41c4-8738-bfd864b00149
 quarkus.oidc.application-type=web-app
 quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
