--- a/front-example/pom.xml
+++ b/front-example/pom.xml
@@ -144,6 +144,12 @@
             <artifactId>front-layout-main</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <repositories>
