--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,12 @@
             <artifactId>font-awesome-iron-iconset</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
