Agent, Robots functions

--- a/front-example/src/main/resources/application.properties
+++ b/front-example/src/main/resources/application.properties
@@ -5,11 +5,26 @@
 #quarkus.index-dependency.multiselect-combo-box-flow.group-id=org.vaadin.gatanaso
 #quarkus.index-dependency.multiselect-combo-box-flow.artifact-id=multiselect-combo-box-flow
 
+quarkus.http.port=9999
+%dev.quarkus.http.port=8888
+
+quarkus.banner.enabled=false
+quarkus.log.level=ERROR
+
+quarkus.package.uber-jar=true
+
+ls.output=web
+ls.browser.control=true
+# Use Desktop.getDesktop().browser by default
+# ls.chrome.exe=native
+ls.chrome.exe=/usr/bin/google-chrome 
+
 # Autentication - Keycloack
-quarkus.oidc.auth-server-url=https://sso-picasso-des-des.infraopplus.igrupobbva/auth/realms/Prueba
+#quarkus.oidc.auth-server-url=https://sso-picasso-des-des.infraopplus.igrupobbva/auth/realms/Prueba
+quarkus.oidc.auth-server-url=http://localhost:8081/auth/realms/Prueba
 quarkus.oidc.client-id=app-n300-00-tray-stage
 quarkus.oidc.credentials.client-secret.method=post
-quarkus.oidc.credentials.client-secret.value=e7fe796b-f14e-41c4-8738-bfd864b00149
+quarkus.oidc.credentials.client-secret.value=5df22671-f64e-4f79-9577-2eb8e1232834
 quarkus.oidc.application-type=web-app
 quarkus.http.auth.permission.authenticated.paths=/*
 quarkus.http.auth.permission.authenticated.policy=authenticated
