Start Chrome, Agent, Robots functions

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <module>front-layout-main</module>
         <module>front-template</module>
         <module>front-example</module>
+        <module>front-micro-parent</module>
     </modules>
 
     <repositories>
