Start Chrome, Agent, Robots functions

--- a/front-micro-parent/front-micro-app-catalog/pom.xml
+++ b/front-micro-parent/front-micro-app-catalog/pom.xml
@@ -3,22 +3,25 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>front-components</artifactId>
+        <artifactId>front-micro-parent</artifactId>
         <groupId>es.opplus.front</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <artifactId>front-micro-parent</artifactId>
+
+    <artifactId>front-micro-app-catalog</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
-    <modules>
-        <module>front-micro-barcode-scanner</module>
-        <module>front-micro-app-catalog</module>
-    </modules>
-
+    <!--
+    <dependencies>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-oidc</artifactId>
+        </dependency>
+    </dependencies>
+    -->
 </project>
